<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headline"
        style="@style/TeamNameTextStyle"
        android:background="@color/colorAccent"
        android:text="@string/head_line"
        android:textAllCaps="false"
        android:textColor="@color/scoreTextColor" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:layout_margin="@dimen/big_margin"
            android:src="@drawable/ball">
        </ImageView>

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_a_name"
                    style="@style/TeamNameTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/Team_name_A"
                    android:inputType="text" />

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneTeamA"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textColor="@color/redScore" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneTeamA"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Smashes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneSmashTeamA"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_a_smashes"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textSize="@dimen/counters_text_size" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneSmashTeamA"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Blocks" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneBlockTeamA"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_a_blocks"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textSize="@dimen/counters_text_size" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneBlockTeamA"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <Button
                    android:id="@+id/resetA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="resetScoreA"
                    android:text="@string/Reset_A" />

                <View style="@style/HorizontalLineBetweenStyle" />

            </LinearLayout>

            <View style="@style/VerticalLineBetweenStyle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/team_b_name"
                    style="@style/TeamNameTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/Team_name_B"
                    android:inputType="text"/>

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneTeamB"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textColor="@color/redScore" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneTeamB"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Smashes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneSmashTeamB"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_b_smashes"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textSize="@dimen/counters_text_size" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneSmashTeamB"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <TextView
                    style="@style/HeadLineTextStyle"
                    android:text="@string/Blocks" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addMinusOneBlockTeamB"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/team_b_blocks"
                        style="@style/ScoreTextStyle"
                        android:text="@string/inicZero"
                        android:textSize="@dimen/counters_text_size" />

                    <Button
                        style="@style/PlusMinusButtonStyle"
                        android:onClick="addPlusOneBlockTeamB"
                        android:text="@string/plus" />
                </LinearLayout>

                <View style="@style/HorizontalLineBetweenStyle" />

                <Button
                    android:id="@+id/resetB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="resetScoreB"
                    android:text="@string/Reset_B" />

                <View style="@style/HorizontalLineBetweenStyle" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sec_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding"
            android:layout_below="@+id/main_layout">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SetHeadLineTextStyle"
                    android:text="@string/Set" />

                <TextView
                    style="@style/SetPointTextStyle"
                    android:text="@string/set_1" />

                <TextView
                    style="@style/SetPointTextStyle"
                    android:text="@string/set_2" />

                <TextView
                    style="@style/SetPointTextStyle"
                    android:text="@string/set_3" />

                <TextView
                    style="@style/SetPointTextStyle"
                    android:text="@string/set_4" />

                <TextView
                    style="@style/SetPointTextStyle"
                    android:text="@string/set_5" />

                <TextView
                    style="@style/SetHeadLineTextStyle"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/Score" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/teamA_score_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_name2"
                    style="@style/SetHeadLineTextStyle"
                    android:text="@string/Team_A" />

                <TextView
                    android:id="@+id/team_a_set_1"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_a_set_2"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_a_set_3"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_a_set_4"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_a_set_5"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_a_set_score"
                    style="@style/SetHeadLineTextStyle"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/inicZero" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teamB_score_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_name2"
                    style="@style/SetHeadLineTextStyle"
                    android:text="@string/Team_B" />

                <TextView
                    android:id="@+id/team_b_set_1"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_b_set_2"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_b_set_3"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_b_set_4"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_b_set_5"
                    style="@style/SetPointTextStyle"
                    android:text="@string/inicBlanc" />

                <TextView
                    android:id="@+id/team_b_set_score"
                    style="@style/SetHeadLineTextStyle"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/inicZero" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/horizontal_line"
            style="@style/HorizontalLineBetweenStyle"
            android:layout_below="@+id/sec_layout"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetAll"
            android:text="@string/Reset_ALL"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>